--- a/main.html
+++ b/main.html
@@ -4,10 +4,35 @@
 
 <head>
 	<link rel="stylesheet" href="styles.css">
+	<style>
+		body{
+			width:1100px;
+			background-color:gray;
+		}
+	</style>
 </head>
+	
 
 <body>
 	<!-- the entire body must be written by student -->
+	<div class="imageContainer">
+		<img src="https://images.unsplash.com/photo-1444703686981-a3abbc4d4fe3?q=80&w=1470&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" style="width:400px">
+	</div>
+
+	<table>
+		<tr>
+			<td>
+				<img src="https://plus.unsplash.com/premium_photo-1675804669850-a1c3b87589d5?q=80&w=1470&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" style="width:200px">
+			</td>
+			<td>
+				<p style="width:600px">Create an HTML webpage about architecture. The webpage should have a width of 1100px and include a div with the class "imageContainer" that contains an image. Create a table with three columns: the first and last columns should contain images, and the middle column should contain text. The width of the first and last columns should be 200, and the width of the middle column should be 600. Enhance the visual appearance of the webpage by applying additional styling. Ensure that all required elements are included and appropriately styled.</p>
+			</td>
+			<td>
+				<img src="https://images.unsplash.com/photo-1597283712405-819a6021326c?q=80&w=1470&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" style="width:200px">
+			</td>
+		</tr>
+		
+	</table>
     <script type="text/javascript" src="./script.js">
 </script>
 
